--- a/index_en.html
+++ b/index_en.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Die 15 gr&ouml;&szlig;ten Wissenschafter der Neuzeit</title>
+<title>The 15 Greatest Scientists of the Modern Era</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -377,22 +377,22 @@
 </div>
 
 <div class="counter" id="counter"></div>
-<div class="hint">&larr; &rarr; Pfeiltasten | Leertaste</div>
+<div class="hint">&larr; &rarr; Arrow keys | Space</div>
 
 <script>
 const scientists = [
   {
     name: "Galileo Galilei",
     years: "1564\u20131642",
-    field: "Astronomie & Physik",
-    bio: "Italienischer Polymath, gilt als Vater der modernen Astronomie.",
+    field: "Astronomy & Physics",
+    bio: "Italian polymath, considered the father of modern astronomy.",
     achievements: [
-      "Entdeckung der Jupitermonde",
-      "Phasen der Venus beobachtet",
-      "Fallgesetze formuliert",
-      "Hauptwerke: Sidereus Nuncius (1610), Dialogo (1632)"
+      "Discovery of Jupiter's moons",
+      "Observed phases of Venus",
+      "Formulated laws of falling bodies",
+      "Major works: Sidereus Nuncius (1610), Dialogo (1632)"
     ],
-    influence: "Begr\u00fcndete die empirische Methode in der Wissenschaft.",
+    influence: "Founded the empirical method in science.",
     image: "portraits/01_Galileo_Galilei.jpg",
     symbol: "\uD83D\uDD2D",
     flag: "\uD83C\uDDEE\uD83C\uDDF9"
@@ -400,15 +400,15 @@ const scientists = [
   {
     name: "Johannes Kepler",
     years: "1571\u20131630",
-    field: "Astronomie & Mathematik",
-    bio: "Deutscher Mathematiker und Astronom.",
+    field: "Astronomy & Mathematics",
+    bio: "German mathematician and astronomer.",
     achievements: [
-      "Drei Keplersche Gesetze der Planetenbewegung",
-      "Beweis der elliptischen Planetenbahnen",
-      "Grundlagen der modernen Optik",
-      "Hauptwerk: Astronomia Nova (1609)"
+      "Three Kepler's laws of planetary motion",
+      "Proof of elliptical planetary orbits",
+      "Foundations of modern optics",
+      "Major work: Astronomia Nova (1609)"
     ],
-    influence: "Legte das mathematische Fundament f\u00fcr die Himmelsmechanik.",
+    influence: "Laid the mathematical foundation for celestial mechanics.",
     image: "portraits/15_Johannes_Kepler.jpg",
     symbol: "\uD83E\uDE90",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -416,15 +416,15 @@ const scientists = [
   {
     name: "Isaac Newton",
     years: "1643\u20131727",
-    field: "Physik & Mathematik",
-    bio: "Englischer Physiker und Mathematiker.",
+    field: "Physics & Mathematics",
+    bio: "English physicist and mathematician.",
     achievements: [
-      "Gravitationsgesetz aufgestellt",
-      "Drei Bewegungsgesetze formuliert",
-      "Infinitesimalrechnung entwickelt",
-      "Hauptwerk: Principia Mathematica (1687)"
+      "Established the law of gravitation",
+      "Formulated three laws of motion",
+      "Developed calculus",
+      "Major work: Principia Mathematica (1687)"
     ],
-    influence: "Schuf das Fundament der klassischen Mechanik.",
+    influence: "Created the foundation of classical mechanics.",
     image: "portraits/02_Isaac_Newton.jpg",
     symbol: "\uD83C\uDF4E",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -432,15 +432,15 @@ const scientists = [
   {
     name: "Charles Darwin",
     years: "1809\u20131882",
-    field: "Biologie & Naturgeschichte",
-    bio: "Britischer Naturforscher, ber\u00fchmte Reise auf der HMS Beagle.",
+    field: "Biology & Natural History",
+    bio: "British naturalist, famous voyage on HMS Beagle.",
     achievements: [
-      "Evolutionstheorie durch nat\u00fcrliche Selektion",
-      "Umfassende Studien zur Artbildung",
-      "Grundlagen der modernen Biologie",
-      "Hauptwerk: On the Origin of Species (1859)"
+      "Theory of evolution by natural selection",
+      "Comprehensive studies on speciation",
+      "Foundations of modern biology",
+      "Major work: On the Origin of Species (1859)"
     ],
-    influence: "Legte den Grundstein der modernen Biologie.",
+    influence: "Laid the cornerstone of modern biology.",
     image: "portraits/03_Charles_Darwin.jpg",
     symbol: "\uD83D\uDC22",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -448,15 +448,15 @@ const scientists = [
   {
     name: "James Clerk Maxwell",
     years: "1831\u20131879",
-    field: "Theoretische Physik",
-    bio: "Schottischer Physiker.",
+    field: "Theoretical Physics",
+    bio: "Scottish physicist.",
     achievements: [
-      "Maxwell-Gleichungen des Elektromagnetismus",
-      "Kinetische Gastheorie mitentwickelt",
-      "Erste Farbfotografie demonstriert",
-      "Hauptwerk: A Treatise on Electricity and Magnetism (1873)"
+      "Maxwell's equations of electromagnetism",
+      "Co-developed kinetic gas theory",
+      "Demonstrated first color photography",
+      "Major work: A Treatise on Electricity and Magnetism (1873)"
     ],
-    influence: "Vereinheitlichte Elektrizit\u00e4t, Magnetismus und Licht; Basis f\u00fcr die Relativit\u00e4tstheorie.",
+    influence: "Unified electricity, magnetism and light; basis for the theory of relativity.",
     image: "portraits/04_James_Clerk_Maxwell.jpg",
     symbol: "\u26A1",
     flag: "\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F"
@@ -464,15 +464,15 @@ const scientists = [
   {
     name: "Fritz Haber",
     years: "1868\u20131934",
-    field: "Chemie",
-    bio: "Deutscher Chemiker, umstrittener Pionier der chemischen Industrie.",
+    field: "Chemistry",
+    bio: "German chemist, controversial pioneer of chemical industry.",
     achievements: [
-      "Haber-Bosch-Verfahren zur Ammoniaksynthese",
-      "Erm\u00f6glichte industrielle D\u00fcngemittelproduktion",
-      "Nobelpreis f\u00fcr Chemie 1918",
-      "Ein Drittel der Weltern\u00e4hrung basiert auf seinem Verfahren"
+      "Haber-Bosch process for ammonia synthesis",
+      "Enabled industrial fertilizer production",
+      "Nobel Prize for Chemistry 1918",
+      "One third of world food production relies on his process"
     ],
-    influence: "Sein Verfahren ern\u00e4hrt heute fast die H\u00e4lfte der Weltbev\u00f6lkerung.",
+    influence: "His process feeds nearly half the world's population today.",
     image: "portraits/13_Fritz_Haber.jpg",
     symbol: "\uD83E\uDDEA",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -480,15 +480,15 @@ const scientists = [
   {
     name: "Guglielmo Marconi",
     years: "1874\u20131937",
-    field: "Funktechnik & Elektrotechnik",
-    bio: "Italienischer Erfinder und Elektroingenieur.",
+    field: "Radio Technology & Electrical Engineering",
+    bio: "Italian inventor and electrical engineer.",
     achievements: [
-      "Erste drahtlose Funk\u00fcbertragung \u00fcber den Atlantik (1901)",
-      "Entwicklung praxistauglicher Radiosysteme",
-      "Nobelpreis f\u00fcr Physik 1909",
-      "Grundstein der modernen Telekommunikation"
+      "First wireless radio transmission across the Atlantic (1901)",
+      "Development of practical radio systems",
+      "Nobel Prize for Physics 1909",
+      "Foundation of modern telecommunications"
     ],
-    influence: "Erm\u00f6glichte die drahtlose Kommunikation und ver\u00e4nderte die Welt.",
+    influence: "Enabled wireless communication and changed the world.",
     image: "portraits/16_Guglielmo_Marconi.jpg",
     symbol: "\uD83D\uDCE1",
     flag: "\uD83C\uDDEE\uD83C\uDDF9"
@@ -496,15 +496,15 @@ const scientists = [
   {
     name: "Albert Einstein",
     years: "1879\u20131955",
-    field: "Theoretische Physik",
-    bio: "Deutsch-amerikanischer Physiker.",
+    field: "Theoretical Physics",
+    bio: "German-American physicist.",
     achievements: [
-      "Spezielle und Allgemeine Relativit\u00e4tstheorie",
-      "Masse-Energie-\u00c4quivalenz: E=mc\u00b2",
-      "Erkl\u00e4rung des Photoelektrischen Effekts",
-      "Nobelpreis f\u00fcr Physik 1921"
+      "Special and General Theory of Relativity",
+      "Mass-energy equivalence: E=mc\u00b2",
+      "Explanation of the photoelectric effect",
+      "Nobel Prize for Physics 1921"
     ],
-    influence: "Revolutionierte unser Verst\u00e4ndnis von Raum und Zeit.",
+    influence: "Revolutionized our understanding of space and time.",
     image: "portraits/07_Albert_Einstein.jpg",
     symbol: "\uD83D\uDCAB",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -512,15 +512,15 @@ const scientists = [
   {
     name: "Alexander Fleming",
     years: "1881\u20131955",
-    field: "Medizin & Mikrobiologie",
-    bio: "Schottischer Arzt und Mikrobiologe.",
+    field: "Medicine & Microbiology",
+    bio: "Scottish physician and microbiologist.",
     achievements: [
-      "Entdeckung des Penicillins (1928)",
-      "Erstes Antibiotikum der Geschichte",
-      "Entdeckung des Lysozyms",
-      "Nobelpreis f\u00fcr Medizin 1945"
+      "Discovery of penicillin (1928)",
+      "First antibiotic in history",
+      "Discovery of lysozyme",
+      "Nobel Prize for Medicine 1945"
     ],
-    influence: "Begr\u00fcndete das Zeitalter der Antibiotika.",
+    influence: "Founded the age of antibiotics.",
     image: "portraits/08_Alexander_Fleming.jpg",
     symbol: "\uD83D\uDC8A",
     flag: "\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F"
@@ -528,15 +528,15 @@ const scientists = [
   {
     name: "Niels Bohr",
     years: "1885\u20131962",
-    field: "Atomphysik",
-    bio: "D\u00e4nischer Physiker.",
+    field: "Atomic Physics",
+    bio: "Danish physicist.",
     achievements: [
-      "Bohrsches Atommodell entwickelt",
-      "Beitr\u00e4ge zur Quantentheorie",
-      "Komplementarit\u00e4tsprinzip formuliert",
-      "Nobelpreis f\u00fcr Physik 1922"
+      "Developed the Bohr atomic model",
+      "Contributions to quantum theory",
+      "Formulated the complementarity principle",
+      "Nobel Prize for Physics 1922"
     ],
-    influence: "Zentral f\u00fcr das Verst\u00e4ndnis des atomaren Aufbaus.",
+    influence: "Central to understanding atomic structure.",
     image: "portraits/09_Niels_Bohr.jpg",
     symbol: "\u269B\uFE0F",
     flag: "\uD83C\uDDE9\uD83C\uDDF0"
@@ -544,15 +544,15 @@ const scientists = [
   {
     name: "John von Neumann",
     years: "1903\u20131957",
-    field: "Mathematik & Informatik",
-    bio: "Ungarisch-amerikanischer Mathematiker, Physiker und Informatiker.",
+    field: "Mathematics & Computer Science",
+    bio: "Hungarian-American mathematician, physicist and computer scientist.",
     achievements: [
-      "Von-Neumann-Architektur moderner Computer",
-      "Mathematische Grundlagen der Quantenmechanik",
-      "Spieltheorie mitbegr\u00fcndet",
-      "Beitr\u00e4ge zum Manhattan-Projekt"
+      "Von Neumann architecture of modern computers",
+      "Mathematical foundations of quantum mechanics",
+      "Co-founded game theory",
+      "Contributions to the Manhattan Project"
     ],
-    influence: "Einer der vielseitigsten Wissenschafter des 20. Jahrhunderts.",
+    influence: "One of the most versatile scientists of the 20th century.",
     image: "portraits/14_John_von_Neumann.jpg",
     symbol: "\uD83D\uDCBB",
     flag: "\uD83C\uDDED\uD83C\uDDFA"
@@ -560,15 +560,15 @@ const scientists = [
   {
     name: "William Shockley",
     years: "1910\u20131989",
-    field: "Halbleiterphysik",
-    bio: "Amerikanischer Physiker, Erfinder des Transistors (mit Bardeen & Brattain).",
+    field: "Semiconductor Physics",
+    bio: "American physicist, inventor of the transistor (with Bardeen & Brattain).",
     achievements: [
-      "Erfindung des Sperrschicht-Transistors (1948)",
-      "Grundlage der modernen Elektronik und Digitaltechnik",
-      "Nobelpreis f\u00fcr Physik 1956 (mit Bardeen & Brattain)",
-      "Gr\u00fcnder von Shockley Semiconductor Laboratory"
+      "Invention of the junction transistor (1948)",
+      "Foundation of modern electronics and digital technology",
+      "Nobel Prize for Physics 1956 (with Bardeen & Brattain)",
+      "Founder of Shockley Semiconductor Laboratory"
     ],
-    influence: "Der Transistor erm\u00f6glichte die digitale Revolution.",
+    influence: "The transistor enabled the digital revolution.",
     image: "portraits/18_William_Shockley.jpg",
     symbol: "",
     svgSymbol: true,
@@ -577,15 +577,15 @@ const scientists = [
   {
     name: "Alan Turing",
     years: "1912\u20131954",
-    field: "Informatik & Mathematik",
-    bio: "Britischer Logiker und Codebreaker.",
+    field: "Computer Science & Mathematics",
+    bio: "British logician and codebreaker.",
     achievements: [
-      "Konzept der Turing-Maschine",
-      "Entschl\u00fcsselung der Enigma im 2. Weltkrieg",
-      "Grundlagen der K\u00fcnstlichen Intelligenz",
-      "Turing-Test zur Bewertung von KI"
+      "Concept of the Turing machine",
+      "Breaking the Enigma code in World War II",
+      "Foundations of artificial intelligence",
+      "Turing test for evaluating AI"
     ],
-    influence: "Schuf das theoretische Fundament der Informatik.",
+    influence: "Created the theoretical foundation of computer science.",
     image: "portraits/10_Alan_Turing.jpg",
     symbol: "\uD83D\uDD10",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -593,15 +593,15 @@ const scientists = [
   {
     name: "Watson & Crick",
     years: "geb. 1928 / 1916\u20132004",
-    field: "Molekularbiologie",
-    bio: "James Watson (US) und Francis Crick (GB) entschl\u00fcsselten gemeinsam die Struktur der DNA.",
+    field: "Molecular Biology",
+    bio: "James Watson (US) and Francis Crick (UK) together deciphered the structure of DNA.",
     achievements: [
-      "Entdeckung der Doppelhelix-Struktur der DNA (1953)",
-      "Basierend auf R\u00f6ntgendaten von Rosalind Franklin",
-      "Leitung des Humangenomprojekts (Watson)",
-      "Nobelpreis f\u00fcr Medizin 1962"
+      "Discovery of the double helix structure of DNA (1953)",
+      "Based on X-ray data from Rosalind Franklin",
+      "Led the Human Genome Project (Watson)",
+      "Nobel Prize for Medicine 1962"
     ],
-    influence: "Legten den Grundstein der modernen Genetik.",
+    influence: "Laid the foundation of modern genetics.",
     image: "portraits/11_James_Watson.jpg",
     image2: "portraits/11b_Francis_Crick.jpg",
     symbol: "\uD83E\uDDEC",
@@ -610,15 +610,15 @@ const scientists = [
   {
     name: "Peter Higgs",
     years: "1929\u20132024",
-    field: "Theoretische Physik",
-    bio: "Britischer Physiker, Entdecker des Higgs-Mechanismus.",
+    field: "Theoretical Physics",
+    bio: "British physicist, discoverer of the Higgs mechanism.",
     achievements: [
-      "Vorhersage des Higgs-Bosons (1964)",
-      "Erkl\u00e4rung der Masse von Elementarteilchen",
-      "Best\u00e4tigung am CERN durch den LHC (2012)",
-      "Nobelpreis f\u00fcr Physik 2013"
+      "Prediction of the Higgs boson (1964)",
+      "Explanation of the mass of elementary particles",
+      "Confirmed at CERN by the LHC (2012)",
+      "Nobel Prize for Physics 2013"
     ],
-    influence: "Vervollst\u00e4ndigte das Standardmodell der Teilchenphysik.",
+    influence: "Completed the Standard Model of particle physics.",
     image: "portraits/17_Peter_Higgs.jpg",
     symbol: "",
     logo: "portraits/Lucas-Higgs-CE0047H-nice2.jpg",
@@ -648,8 +648,8 @@ const gridCards = scientists.map((s, i) => {
   </div>`;
 }).join('');
 titleSlide.innerHTML = `
-  <h1>Die 15 gr\u00f6\u00dften Wissenschafter<br>der Neuzeit</h1>
-  <p>Eine Reise durch die Geschichte der Wissenschaft</p>
+  <h1>The 15 Greatest Scientists<br>of the Modern Era</h1>
+  <p>A Journey Through the History of Science</p>
   <div class="title-grid">${gridCards}</div>
 `;
 container.appendChild(titleSlide);
@@ -690,7 +690,7 @@ scientists.forEach((s, i) => {
   slide.innerHTML = `
     ${imageHTML}
     <div class="slide-content">
-      <div class="slide-number">Wissenschafter ${i + 1} von 15</div>
+      <div class="slide-number">Scientist ${i + 1} of 15</div>
       <h2>${s.name}</h2>
       <div class="field">${s.field}</div>
       <div class="dates">${s.years}</div>
