--- a/index_it.html
+++ b/index_it.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="it">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Die 15 gr&ouml;&szlig;ten Wissenschafter der Neuzeit</title>
+<title>I 15 pi&ugrave; grandi scienziati dell'era moderna</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -377,22 +377,22 @@
 </div>
 
 <div class="counter" id="counter"></div>
-<div class="hint">&larr; &rarr; Pfeiltasten | Leertaste</div>
+<div class="hint">&larr; &rarr; Tasti freccia | Spazio</div>
 
 <script>
 const scientists = [
   {
     name: "Galileo Galilei",
     years: "1564\u20131642",
-    field: "Astronomie & Physik",
-    bio: "Italienischer Polymath, gilt als Vater der modernen Astronomie.",
+    field: "Astronomia e Fisica",
+    bio: "Poliedrico italiano, considerato il padre dell'astronomia moderna.",
     achievements: [
-      "Entdeckung der Jupitermonde",
-      "Phasen der Venus beobachtet",
-      "Fallgesetze formuliert",
-      "Hauptwerke: Sidereus Nuncius (1610), Dialogo (1632)"
+      "Scoperta delle lune di Giove",
+      "Osservazione delle fasi di Venere",
+      "Formulazione delle leggi della caduta dei gravi",
+      "Opere principali: Sidereus Nuncius (1610), Dialogo (1632)"
     ],
-    influence: "Begr\u00fcndete die empirische Methode in der Wissenschaft.",
+    influence: "Fond\u00f2 il metodo empirico nella scienza.",
     image: "portraits/01_Galileo_Galilei.jpg",
     symbol: "\uD83D\uDD2D",
     flag: "\uD83C\uDDEE\uD83C\uDDF9"
@@ -400,15 +400,15 @@ const scientists = [
   {
     name: "Johannes Kepler",
     years: "1571\u20131630",
-    field: "Astronomie & Mathematik",
-    bio: "Deutscher Mathematiker und Astronom.",
+    field: "Astronomia e Matematica",
+    bio: "Matematico e astronomo tedesco.",
     achievements: [
-      "Drei Keplersche Gesetze der Planetenbewegung",
-      "Beweis der elliptischen Planetenbahnen",
-      "Grundlagen der modernen Optik",
-      "Hauptwerk: Astronomia Nova (1609)"
+      "Tre leggi di Keplero sul moto planetario",
+      "Dimostrazione delle orbite planetarie ellittiche",
+      "Fondamenti dell'ottica moderna",
+      "Opera principale: Astronomia Nova (1609)"
     ],
-    influence: "Legte das mathematische Fundament f\u00fcr die Himmelsmechanik.",
+    influence: "Pose le basi matematiche della meccanica celeste.",
     image: "portraits/15_Johannes_Kepler.jpg",
     symbol: "\uD83E\uDE90",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -416,15 +416,15 @@ const scientists = [
   {
     name: "Isaac Newton",
     years: "1643\u20131727",
-    field: "Physik & Mathematik",
-    bio: "Englischer Physiker und Mathematiker.",
+    field: "Fisica e Matematica",
+    bio: "Fisico e matematico inglese.",
     achievements: [
-      "Gravitationsgesetz aufgestellt",
-      "Drei Bewegungsgesetze formuliert",
-      "Infinitesimalrechnung entwickelt",
-      "Hauptwerk: Principia Mathematica (1687)"
+      "Formulazione della legge di gravitazione",
+      "Tre leggi del moto",
+      "Sviluppo del calcolo infinitesimale",
+      "Opera principale: Principia Mathematica (1687)"
     ],
-    influence: "Schuf das Fundament der klassischen Mechanik.",
+    influence: "Cre\u00f2 le fondamenta della meccanica classica.",
     image: "portraits/02_Isaac_Newton.jpg",
     symbol: "\uD83C\uDF4E",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -432,15 +432,15 @@ const scientists = [
   {
     name: "Charles Darwin",
     years: "1809\u20131882",
-    field: "Biologie & Naturgeschichte",
-    bio: "Britischer Naturforscher, ber\u00fchmte Reise auf der HMS Beagle.",
+    field: "Biologia e Storia Naturale",
+    bio: "Naturalista britannico, celebre viaggio sulla HMS Beagle.",
     achievements: [
-      "Evolutionstheorie durch nat\u00fcrliche Selektion",
-      "Umfassende Studien zur Artbildung",
-      "Grundlagen der modernen Biologie",
-      "Hauptwerk: On the Origin of Species (1859)"
+      "Teoria dell'evoluzione per selezione naturale",
+      "Studi approfonditi sulla speciazione",
+      "Fondamenti della biologia moderna",
+      "Opera principale: On the Origin of Species (1859)"
     ],
-    influence: "Legte den Grundstein der modernen Biologie.",
+    influence: "Pose le basi della biologia moderna.",
     image: "portraits/03_Charles_Darwin.jpg",
     symbol: "\uD83D\uDC22",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -448,15 +448,15 @@ const scientists = [
   {
     name: "James Clerk Maxwell",
     years: "1831\u20131879",
-    field: "Theoretische Physik",
-    bio: "Schottischer Physiker.",
+    field: "Fisica Teorica",
+    bio: "Fisico scozzese.",
     achievements: [
-      "Maxwell-Gleichungen des Elektromagnetismus",
-      "Kinetische Gastheorie mitentwickelt",
-      "Erste Farbfotografie demonstriert",
-      "Hauptwerk: A Treatise on Electricity and Magnetism (1873)"
+      "Equazioni di Maxwell dell'elettromagnetismo",
+      "Co-sviluppo della teoria cinetica dei gas",
+      "Prima fotografia a colori",
+      "Opera principale: A Treatise on Electricity and Magnetism (1873)"
     ],
-    influence: "Vereinheitlichte Elektrizit\u00e4t, Magnetismus und Licht; Basis f\u00fcr die Relativit\u00e4tstheorie.",
+    influence: "Unific\u00f2 elettricit\u00e0, magnetismo e luce; base per la teoria della relativit\u00e0.",
     image: "portraits/04_James_Clerk_Maxwell.jpg",
     symbol: "\u26A1",
     flag: "\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F"
@@ -464,15 +464,15 @@ const scientists = [
   {
     name: "Fritz Haber",
     years: "1868\u20131934",
-    field: "Chemie",
-    bio: "Deutscher Chemiker, umstrittener Pionier der chemischen Industrie.",
+    field: "Chimica",
+    bio: "Chimico tedesco, controverso pioniere dell'industria chimica.",
     achievements: [
-      "Haber-Bosch-Verfahren zur Ammoniaksynthese",
-      "Erm\u00f6glichte industrielle D\u00fcngemittelproduktion",
-      "Nobelpreis f\u00fcr Chemie 1918",
-      "Ein Drittel der Weltern\u00e4hrung basiert auf seinem Verfahren"
+      "Processo Haber-Bosch per la sintesi dell'ammoniaca",
+      "Rese possibile la produzione industriale di fertilizzanti",
+      "Premio Nobel per la Chimica 1918",
+      "Un terzo della produzione alimentare mondiale si basa sul suo processo"
     ],
-    influence: "Sein Verfahren ern\u00e4hrt heute fast die H\u00e4lfte der Weltbev\u00f6lkerung.",
+    influence: "Il suo processo nutre oggi quasi met\u00e0 della popolazione mondiale.",
     image: "portraits/13_Fritz_Haber.jpg",
     symbol: "\uD83E\uDDEA",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -480,15 +480,15 @@ const scientists = [
   {
     name: "Guglielmo Marconi",
     years: "1874\u20131937",
-    field: "Funktechnik & Elektrotechnik",
-    bio: "Italienischer Erfinder und Elektroingenieur.",
+    field: "Radiotecnica e Ingegneria Elettrica",
+    bio: "Inventore e ingegnere elettrico italiano.",
     achievements: [
-      "Erste drahtlose Funk\u00fcbertragung \u00fcber den Atlantik (1901)",
-      "Entwicklung praxistauglicher Radiosysteme",
-      "Nobelpreis f\u00fcr Physik 1909",
-      "Grundstein der modernen Telekommunikation"
+      "Prima trasmissione radio senza fili attraverso l'Atlantico (1901)",
+      "Sviluppo di sistemi radio pratici",
+      "Premio Nobel per la Fisica 1909",
+      "Fondamento delle telecomunicazioni moderne"
     ],
-    influence: "Erm\u00f6glichte die drahtlose Kommunikation und ver\u00e4nderte die Welt.",
+    influence: "Rese possibile la comunicazione senza fili e cambi\u00f2 il mondo.",
     image: "portraits/16_Guglielmo_Marconi.jpg",
     symbol: "\uD83D\uDCE1",
     flag: "\uD83C\uDDEE\uD83C\uDDF9"
@@ -496,15 +496,15 @@ const scientists = [
   {
     name: "Albert Einstein",
     years: "1879\u20131955",
-    field: "Theoretische Physik",
-    bio: "Deutsch-amerikanischer Physiker.",
+    field: "Fisica Teorica",
+    bio: "Fisico tedesco-americano.",
     achievements: [
-      "Spezielle und Allgemeine Relativit\u00e4tstheorie",
-      "Masse-Energie-\u00c4quivalenz: E=mc\u00b2",
-      "Erkl\u00e4rung des Photoelektrischen Effekts",
-      "Nobelpreis f\u00fcr Physik 1921"
+      "Teoria della Relativit\u00e0 Speciale e Generale",
+      "Equivalenza massa-energia: E=mc\u00b2",
+      "Spiegazione dell'effetto fotoelettrico",
+      "Premio Nobel per la Fisica 1921"
     ],
-    influence: "Revolutionierte unser Verst\u00e4ndnis von Raum und Zeit.",
+    influence: "Rivoluzion\u00f2 la nostra comprensione dello spazio e del tempo.",
     image: "portraits/07_Albert_Einstein.jpg",
     symbol: "\uD83D\uDCAB",
     flag: "\uD83C\uDDE9\uD83C\uDDEA"
@@ -512,15 +512,15 @@ const scientists = [
   {
     name: "Alexander Fleming",
     years: "1881\u20131955",
-    field: "Medizin & Mikrobiologie",
-    bio: "Schottischer Arzt und Mikrobiologe.",
+    field: "Medicina e Microbiologia",
+    bio: "Medico e microbiologo scozzese.",
     achievements: [
-      "Entdeckung des Penicillins (1928)",
-      "Erstes Antibiotikum der Geschichte",
-      "Entdeckung des Lysozyms",
-      "Nobelpreis f\u00fcr Medizin 1945"
+      "Scoperta della penicillina (1928)",
+      "Primo antibiotico della storia",
+      "Scoperta del lisozima",
+      "Premio Nobel per la Medicina 1945"
     ],
-    influence: "Begr\u00fcndete das Zeitalter der Antibiotika.",
+    influence: "Fond\u00f2 l'era degli antibiotici.",
     image: "portraits/08_Alexander_Fleming.jpg",
     symbol: "\uD83D\uDC8A",
     flag: "\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F"
@@ -528,15 +528,15 @@ const scientists = [
   {
     name: "Niels Bohr",
     years: "1885\u20131962",
-    field: "Atomphysik",
-    bio: "D\u00e4nischer Physiker.",
+    field: "Fisica Atomica",
+    bio: "Fisico danese.",
     achievements: [
-      "Bohrsches Atommodell entwickelt",
-      "Beitr\u00e4ge zur Quantentheorie",
-      "Komplementarit\u00e4tsprinzip formuliert",
-      "Nobelpreis f\u00fcr Physik 1922"
+      "Sviluppo del modello atomico di Bohr",
+      "Contributi alla teoria quantistica",
+      "Formulazione del principio di complementarit\u00e0",
+      "Premio Nobel per la Fisica 1922"
     ],
-    influence: "Zentral f\u00fcr das Verst\u00e4ndnis des atomaren Aufbaus.",
+    influence: "Fondamentale per la comprensione della struttura atomica.",
     image: "portraits/09_Niels_Bohr.jpg",
     symbol: "\u269B\uFE0F",
     flag: "\uD83C\uDDE9\uD83C\uDDF0"
@@ -544,15 +544,15 @@ const scientists = [
   {
     name: "John von Neumann",
     years: "1903\u20131957",
-    field: "Mathematik & Informatik",
-    bio: "Ungarisch-amerikanischer Mathematiker, Physiker und Informatiker.",
+    field: "Matematica e Informatica",
+    bio: "Matematico, fisico e informatico ungherese-americano.",
     achievements: [
-      "Von-Neumann-Architektur moderner Computer",
-      "Mathematische Grundlagen der Quantenmechanik",
-      "Spieltheorie mitbegr\u00fcndet",
-      "Beitr\u00e4ge zum Manhattan-Projekt"
+      "Architettura von Neumann dei computer moderni",
+      "Fondamenti matematici della meccanica quantistica",
+      "Co-fondatore della teoria dei giochi",
+      "Contributi al Progetto Manhattan"
     ],
-    influence: "Einer der vielseitigsten Wissenschafter des 20. Jahrhunderts.",
+    influence: "Uno degli scienziati pi\u00f9 versatili del XX secolo.",
     image: "portraits/14_John_von_Neumann.jpg",
     symbol: "\uD83D\uDCBB",
     flag: "\uD83C\uDDED\uD83C\uDDFA"
@@ -560,15 +560,15 @@ const scientists = [
   {
     name: "William Shockley",
     years: "1910\u20131989",
-    field: "Halbleiterphysik",
-    bio: "Amerikanischer Physiker, Erfinder des Transistors (mit Bardeen & Brattain).",
+    field: "Fisica dei Semiconduttori",
+    bio: "Fisico americano, inventore del transistor (con Bardeen e Brattain).",
     achievements: [
-      "Erfindung des Sperrschicht-Transistors (1948)",
-      "Grundlage der modernen Elektronik und Digitaltechnik",
-      "Nobelpreis f\u00fcr Physik 1956 (mit Bardeen & Brattain)",
-      "Gr\u00fcnder von Shockley Semiconductor Laboratory"
+      "Invenzione del transistor a giunzione (1948)",
+      "Base dell'elettronica moderna e della tecnologia digitale",
+      "Premio Nobel per la Fisica 1956 (con Bardeen e Brattain)",
+      "Fondatore del Shockley Semiconductor Laboratory"
     ],
-    influence: "Der Transistor erm\u00f6glichte die digitale Revolution.",
+    influence: "Il transistor rese possibile la rivoluzione digitale.",
     image: "portraits/18_William_Shockley.jpg",
     symbol: "",
     svgSymbol: true,
@@ -577,15 +577,15 @@ const scientists = [
   {
     name: "Alan Turing",
     years: "1912\u20131954",
-    field: "Informatik & Mathematik",
-    bio: "Britischer Logiker und Codebreaker.",
+    field: "Informatica e Matematica",
+    bio: "Logico e decifratore britannico.",
     achievements: [
-      "Konzept der Turing-Maschine",
-      "Entschl\u00fcsselung der Enigma im 2. Weltkrieg",
-      "Grundlagen der K\u00fcnstlichen Intelligenz",
-      "Turing-Test zur Bewertung von KI"
+      "Concetto della macchina di Turing",
+      "Decrittazione di Enigma nella Seconda Guerra Mondiale",
+      "Fondamenti dell'intelligenza artificiale",
+      "Test di Turing per la valutazione dell'IA"
     ],
-    influence: "Schuf das theoretische Fundament der Informatik.",
+    influence: "Cre\u00f2 le fondamenta teoriche dell'informatica.",
     image: "portraits/10_Alan_Turing.jpg",
     symbol: "\uD83D\uDD10",
     flag: "\uD83C\uDDEC\uD83C\uDDE7"
@@ -593,15 +593,15 @@ const scientists = [
   {
     name: "Watson & Crick",
     years: "geb. 1928 / 1916\u20132004",
-    field: "Molekularbiologie",
-    bio: "James Watson (US) und Francis Crick (GB) entschl\u00fcsselten gemeinsam die Struktur der DNA.",
+    field: "Biologia Molecolare",
+    bio: "James Watson (USA) e Francis Crick (GB) decifrarono insieme la struttura del DNA.",
     achievements: [
-      "Entdeckung der Doppelhelix-Struktur der DNA (1953)",
-      "Basierend auf R\u00f6ntgendaten von Rosalind Franklin",
-      "Leitung des Humangenomprojekts (Watson)",
-      "Nobelpreis f\u00fcr Medizin 1962"
+      "Scoperta della struttura a doppia elica del DNA (1953)",
+      "Basata sui dati a raggi X di Rosalind Franklin",
+      "Direzione del Progetto Genoma Umano (Watson)",
+      "Premio Nobel per la Medicina 1962"
     ],
-    influence: "Legten den Grundstein der modernen Genetik.",
+    influence: "Posero le basi della genetica moderna.",
     image: "portraits/11_James_Watson.jpg",
     image2: "portraits/11b_Francis_Crick.jpg",
     symbol: "\uD83E\uDDEC",
@@ -610,15 +610,15 @@ const scientists = [
   {
     name: "Peter Higgs",
     years: "1929\u20132024",
-    field: "Theoretische Physik",
-    bio: "Britischer Physiker, Entdecker des Higgs-Mechanismus.",
+    field: "Fisica Teorica",
+    bio: "Fisico britannico, scopritore del meccanismo di Higgs.",
     achievements: [
-      "Vorhersage des Higgs-Bosons (1964)",
-      "Erkl\u00e4rung der Masse von Elementarteilchen",
-      "Best\u00e4tigung am CERN durch den LHC (2012)",
-      "Nobelpreis f\u00fcr Physik 2013"
+      "Previsione del bosone di Higgs (1964)",
+      "Spiegazione della massa delle particelle elementari",
+      "Confermato al CERN dal LHC (2012)",
+      "Premio Nobel per la Fisica 2013"
     ],
-    influence: "Vervollst\u00e4ndigte das Standardmodell der Teilchenphysik.",
+    influence: "Complet\u00f2 il Modello Standard della fisica delle particelle.",
     image: "portraits/17_Peter_Higgs.jpg",
     symbol: "",
     logo: "portraits/Lucas-Higgs-CE0047H-nice2.jpg",
@@ -648,8 +648,8 @@ const gridCards = scientists.map((s, i) => {
   </div>`;
 }).join('');
 titleSlide.innerHTML = `
-  <h1>Die 15 gr\u00f6\u00dften Wissenschafter<br>der Neuzeit</h1>
-  <p>Eine Reise durch die Geschichte der Wissenschaft</p>
+  <h1>I 15 pi\u00f9 grandi scienziati<br>dell'era moderna</h1>
+  <p>Un viaggio nella storia della scienza</p>
   <div class="title-grid">${gridCards}</div>
 `;
 container.appendChild(titleSlide);
@@ -690,7 +690,7 @@ scientists.forEach((s, i) => {
   slide.innerHTML = `
     ${imageHTML}
     <div class="slide-content">
-      <div class="slide-number">Wissenschafter ${i + 1} von 15</div>
+      <div class="slide-number">Scienziato ${i + 1} di 15</div>
       <h2>${s.name}</h2>
       <div class="field">${s.field}</div>
       <div class="dates">${s.years}</div>
